--- a/Hair Salon/Home.html
+++ b/Hair Salon/Home.html
@@ -25,7 +25,7 @@
         </nav>
             <div class="backgroundpic">
                 
-
+                <h1>Hello World</h1>
             </div>
             <div class="para">
                 <h3> Its not a Haircut,Its  an experience</h3> <br>
